# Runic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.yaml  runic.cabal  runic_logic_diagram.drawio
app/: Main.hs  units.json
src/: Compiler.hs  CompilerInternal.hs  Domain.hs  Guess.hs  Lib.hs  Parser.hs  Shunting.hs  Tokenizer.hs  Types.hs  Utils.hs
src/Compiler/: Evaluator.hs  Grammar.hs  Internal.hs  Objects.hs  Parser.hs  Preprocess.hs  RunicParser.hs
src/Compiler/Evaluator/: Internal.hs  Postfix.hs  Shunting.hs  Types.hs
src/Compiler/Parser/: Factory.hs  Grammar.hs  Internal.hs  Keywords.hs  Objects.hs  RegexBuilder.hs  RunicLexemes.hs  RunicMath.hs  RunicTokens.hs  Shunting.hs  TopLevel.hs  Types.hs
src/Compiler/RunicParser/: Errors.hs  Internal.hs  Parser.hs  Types.hs
src/Data/Runic/: Constrainer.hs  Parser.hs  Types.hs
src/Data/Runic/Parser/: Internal.hs  Lang.hs  Lexemes.hs  Math.hs  Units.hs
src/Parser/: Internal.hs  Lang.hs  Lexemes.hs  Math.hs  Units.hs
src/Solver/: Constrainer.hs
test/: Helpers.hs  Main.hs  Spec.hs  units.json
