cabal-version:      3.0
name:               runic
version:            0.0.0.0
synopsis:           I write funny symbols so you don't have to.
description: 
license:            MIT
license-file:       LICENSE
author:             Grant C 
maintainer:         christiansengrant18@gmail.com
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Parser
        Types
        Parser.Internal
        Parser.Lang
        Parser.Lexemes
        Parser.Math
        Parser.Units
    -- other-modules:
        
    other-extensions:
        Safe
        OverloadedStrings
    build-depends:    
        aeson       >=  2.2.3.0,
        base        ^>= 4.16.4.0,
        containers  >=  0.6.5.1,
        mtl         >=  2.2.2,
        parsec      >=  3.1.18.0,
        text        >=  1.2.5.0,
    hs-source-dirs:   src
    default-language: Haskell2010

executable runic
    import:           warnings
    main-is:          Main.hs
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions:
        Safe
    build-depends:
        base ^>=4.16.4.0,
        runic,
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite runic-test
    import:           warnings
    default-language: Haskell2010
    -- Modules included in this executable, other than Main.
    other-modules:
        Helpers
    other-extensions:
        Safe
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base   ^>= 4.16.4.0,
        containers >= 0.6.5.1,
        parsec  >=  3.1.18.0,
        runic,